incrase font size and spacing on previous/next buttons, fix local xdebug configuration, cleanup initial setup (#70)

--- a/app/assets/website/styles/app-overrides.scss
+++ b/app/assets/website/styles/app-overrides.scss
@@ -49,6 +49,7 @@ header {
 .btn-primary {
   background-color: $button-color;
   border-color: $button-border-color;
+  font-size: 1.125rem;
 
   &:hover, &:focus, &:active {
     background-color: $link-color !important;
